[workspace]
members = [
    ".",
    "egui_wings_example",
    "egui_wings_example/example_host",
    "egui_wings_example/example_plugin",
    "egui_wings_host"
]

[workspace.dependencies]

# Internal dependencies
egui_wings = { path = ".", version = "0.1.0" }
egui_wings_example = { path = "egui_wings_example" }
egui_wings_host = { path = "egui_wings_host", version = "0.1.0" }
example_guest = { path = "egui_wings_example/example_guest" }
example_host = { path = "egui_wings_example/example_host" }

# External dependencies
egui = { version = "0.28.1", default-features = false, features = [ "persistence", "serde" ] }
egui-wgpu = { version = "0.28.1", default-features = false, features = ["winit"] }
egui-winit = { version = "0.28.1", default-features = false }
fxhash = { version = "0.2.1", default-features = false }
geese = { version = "0.3.9", default-features = false }
pollster = { version = "0.3.0", default-features = false }
raw-window-handle = { version = "0.6.2", default-features = false }
serde = { version = "1.0.204", default-features = false }
wasmi = { version = "0.36.0", default-features = false }
wasmi_runtime_layer = { version = "0.36.0", default-features = false }
wasmtime_runtime_layer = { version = "23.0.0", default-features = true }
wings = { version = "0.1.2", default-features = false }
wings_host = { version = "0.1.2", default-features = false }
winit = { version = "0.29.4", default-features = false, features = [ "rwh_06" ] }

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "egui bindings for WASM plugins"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/egui_wings"

[patch.crates-io]
egui = { path = "../egui_dyn_context/crates/egui" }
epaint = { path = "../egui_dyn_context/crates/epaint" }
ecolor = { path = "../egui_dyn_context/crates/ecolor" }
wings_host = { path = "../wings/wings_host" }
wings_macro = { path = "../wings/wings_macro" }
wings = { path = "../wings" }

[profile.dev]
panic = "abort"

[package]
name = "egui_wings"
version = "0.1.0"
edition = "2021"

[dependencies]
egui.workspace = true
fxhash.workspace = true
serde.workspace = true
wings.workspace = true