[workspace]
members = [
    ".",
    "egui_wings_example",
    "egui_wings_example/example_host",
    "egui_wings_example/example_plugin",
    "egui_wings_host"
]

[workspace.dependencies]

# Internal dependencies
egui_wings = { path = ".", version = "0.5.0" }
egui_wings_example = { path = "egui_wings_example" }
egui_wings_host = { path = "egui_wings_host", version = "0.5.0" }
example_guest = { path = "egui_wings_example/example_guest" }
example_host = { path = "egui_wings_example/example_host" }

# External dependencies
egui = { version = "=0.32", default-features = false, features = [ "serde" ] }
egui_demo_lib = { version = "0.32", default-features = false }
egui-wgpu = { version = "0.32", default-features = false, features = ["winit"] }
egui-winit = { version = "0.32", default-features = false, features = ["clipboard", "links"] }

geese = { version = "0.3.10", default-features = false }
pollster = { version = "0.4.0", default-features = false }
raw-window-handle = { version = "0.6.2", default-features = false }
serde = { version = "1.0.204", default-features = false }
wasmtime_runtime_layer = { version = "26.0.0", default-features = true }
wings = { version = "0.1.5", default-features = false }
wings_host = { version = "0.1.5", default-features = false }
winit = { version = "0.30.7", default-features = false, features = [ "rwh_06" ] }

[workspace.package]
version = "0.5.0"
edition = "2021"
description = "egui bindings for WASM plugins"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/DouglasDwyer/egui_wings"

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"

[package]
name = "egui_wings"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
egui.workspace = true
serde.workspace = true
wings.workspace = true