[package]
name = "egui_wings_host"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
egui_wings.workspace = true
geese.workspace = true
wings_host.workspace = true
wings.workspace = true