[package]
name = "example_plugin"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = [ "cdylib" ]

[profile.release]
lto = "fat"
opt-level = 3

[dependencies]
egui.workspace = true
egui_wings.workspace = true
example_host.workspace = true
wings.workspace = true
